FIRST TESTING WITH MOCHA

--- a/email.html
+++ b/email.html
@@ -45,6 +45,7 @@
 .card h3, .card p {
   margin: 0;
   text-align: left; /* Alinear el texto a la izquierda */
+  color: white;
 }
 
     .user-info {
@@ -95,6 +96,10 @@
     height: 3em; /* Reducir el tamaño de la imagen */
     margin-right: 0; /* Remover margen a la derecha de la imagen */
     margin-bottom: 1em; /* Añadir margen abajo de la imagen */
+  }
+
+  .card p {
+    color: white;
   }
 
   .user-img {
